Update to navigation and style.

--- a/index.html
+++ b/index.html
@@ -15,44 +15,47 @@
 <body>
   <main>
     <section class="glass">
-      <div class="dashboard">
-        <div class="user">
+      <div class="dashboard solid">
+        <div class="profile">
           <img class="avatar" src="./images/Profile.jpg" alt="Profile">
           <h2>Tristan Baskerville</h2>
           <h3>Software Engineer</h3>
         </div>
         <div class="links">
+          <h2>Navigation:</h2>
           <div class="link">
             <h2>
-              <a href="#page-one">Page One</a>
+              <a href="#home-1">Home</a>
             </h2>
           </div>
-        </div>
-        <div class="links">
           <div class="link">
-            <h2>
-              <a href="#page-two">Page Two</a>
+            <h2>About
+              <a href="#about-1">p.1</a>
+              <a href="#about-2">p.2</a>
             </h2>
           </div>
-        </div>
-        <div class="links">
           <div class="link">
             <h2>
-              <a href="#page-three">Page Three</a>
+              <a href="#projects-1">Projects</a>
             </h2>
           </div>
         </div>
       </div>
-      <div class="info">
-        <section class="scrollable" id="page-one">
-          <h1>Page One</h1>
+      <div class="content">
+
+        <section class="page" id="home-1">
+          <h1>Home p.1</h1>
         </section>
-        <section class="scrollable" id="page-two">
-          <h1>Page Two</h1>
+        <section class="page" id="about-1">
+          <h1>About p.1</h1>
         </section>
-        <section class="scrollable" id="page-three">
-          <h1>Page Three</h1>
+        <section class="page" id="about-2">
+          <h1>About p.2</h1>
         </section>
+        <section class="page" id="projects-1">
+          <h1>Projects p.1</h1>
+        </section>
+
       </div>
     </section>
   </main>
