--- a/index.html
+++ b/index.html
@@ -1,65 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tristan Baskerville | Landing</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tristan Baskerville | Landing</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./style.css">
-</head>
-
-<body>
-  <main>
-    <section class="glass">
-      <div class="dashboard solid">
-        <div class="profile">
-          <img class="avatar" src="./images/Profile.jpg" alt="Profile">
-          <h2>Tristan Baskerville</h2>
-          <h3>Software Engineer</h3>
-        </div>
-        <div class="links">
-          <h2>Navigation:</h2>
-          <div class="link">
-            <h2>
-              <a href="#home-1">Home</a>
-            </h2>
+  <body>
+    <main>
+      <section class="glass">
+        <div class="dashboard solid">
+          <div class="profile">
+            <img class="avatar" src="./images/Profile.jpg" alt="Profile" />
+            <h2>Tristan Baskerville</h2>
+            <h3>Software Engineer</h3>
           </div>
-          <div class="link">
-            <h2>About
-              <a href="#about-1">p.1</a>
-              <a href="#about-2">p.2</a>
-            </h2>
-          </div>
-          <div class="link">
-            <h2>
-              <a href="#projects-1">Projects</a>
-            </h2>
+          <div class="links">
+            <h2>Navigation:</h2>
+            <a class="nav-link" href="#home-1">Home</a>
+            <a class="nav-link" href="#about-1">About</a>
+            <a class="nav-link" href="#projects-1">Projects</a>
           </div>
         </div>
-      </div>
-      <div class="content">
-
-        <section class="page" id="home-1">
-          <h1>Home p.1</h1>
-        </section>
-        <section class="page" id="about-1">
-          <h1>About p.1</h1>
-        </section>
-        <section class="page" id="about-2">
-          <h1>About p.2</h1>
-        </section>
-        <section class="page" id="projects-1">
-          <h1>Projects p.1</h1>
-        </section>
-
-      </div>
-    </section>
-  </main>
-
-</body>
-
+        <div class="content">
+          <section class="page" id="home-1">
+            <h1>Home</h1>
+            <footer><h3>One</h3></footer>
+          </section>
+          <section class="page" id="about-1">
+            <h1>About</h1>
+            <a class="nav-link next" href="#about-2">Next Page</a>
+            <footer><h3>One</h3></footer>
+          </section>
+          <section class="page" id="about-2">
+            <h1>About</h1>
+            <a class="nav-link prev" href="#about-1">Prev. Page</a>
+            <footer><h3>Two</h3></footer>
+          </section>
+          <section class="page" id="projects-1">
+            <iframe
+              class="solid"
+              width="560"
+              height="315"
+              src="https://www.youtube-nocookie.com/embed/3Qtoe79ojpc"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+            <footer><h3>One</h3></footer>
+          </section>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
