Add Fade effect and fix color pallet

--- a/index.html
+++ b/index.html
@@ -32,8 +32,15 @@
         </div>
         <div class="content">
           <section class="page" id="home-1">
-            <h1>Home</h1>
-            <footer><h3>One</h3></footer>
+            <div class="solid page-element">
+              <h1>Home</h1>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br />
+                Expedita quaerat ullam dicta similique ipsum animi facere error
+                modi, voluptatibus doloribus vitae autem, sit quibusdam labore?
+              </p>
+            </div>
+            <footer class="solid page-element"><h3>One</h3></footer>
           </section>
           <section class="page" id="about-1">
             <h1>About</h1>
