--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css" />
@@ -17,12 +17,15 @@
   <body>
     <main>
       <section class="glass">
-        <div class="dashboard solid">
+        <div class="dashboard">
           <div class="profile">
             <img class="avatar" src="./images/Profile.jpg" alt="Profile" />
-            <h2>Tristan Baskerville</h2>
+            <h1>Tristan Baskerville</h1>
             <h3>Software Engineer</h3>
           </div>
+
+          <hr class="line-break" />
+
           <div class="links">
             <h2>Navigation:</h2>
             <a class="nav-link" href="#home-1">Home</a>
@@ -32,29 +35,48 @@
         </div>
         <div class="content">
           <section class="page" id="home-1">
-            <div class="solid page-element">
-              <h1>Home</h1>
+            <div>
+              <h2>Home</h2>
+              <hr class="line-break-left" />
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br />
                 Expedita quaerat ullam dicta similique ipsum animi facere error
                 modi, voluptatibus doloribus vitae autem, sit quibusdam labore?
               </p>
             </div>
-            <footer class="solid page-element"><h3>One</h3></footer>
+            <footer>
+              <h4>One</h4>
+            </footer>
           </section>
+
           <section class="page" id="about-1">
-            <h1>About</h1>
+            <div>
+              <h2>About</h2>
+              <hr class="line-break-left" />
+              <p>
+                This website has been hand crafted by yours truly. <br />
+                I took a couple of weeks to learn HTML and CSS; if you find
+                <br />
+                any bugs, send me a message! I'd love to hear from you.
+              </p>
+            </div>
             <a class="nav-link next" href="#about-2">Next Page</a>
-            <footer><h3>One</h3></footer>
+            <footer>
+              <h4>One</h4>
+            </footer>
           </section>
           <section class="page" id="about-2">
-            <h1>About</h1>
+            <div>
+              <h2>About</h2>
+            </div>
             <a class="nav-link prev" href="#about-1">Prev. Page</a>
-            <footer><h3>Two</h3></footer>
+            <footer>
+              <h4>Two</h4>
+            </footer>
           </section>
+
           <section class="page" id="projects-1">
             <iframe
-              class="solid"
               width="560"
               height="315"
               src="https://www.youtube-nocookie.com/embed/3Qtoe79ojpc"
@@ -62,8 +84,10 @@
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
-            ></iframe>
-            <footer><h3>One</h3></footer>
+            />
+            <footer>
+              <h4>One</h4>
+            </footer>
           </section>
         </div>
       </section>
