Add content to pages and update style

--- a/index.html
+++ b/index.html
@@ -23,31 +23,53 @@
       <section class="glass">
         <div class="dashboard">
           <div class="profile">
-            <img class="avatar" src="./images/Profile.jpg" alt="Profile" />
+            <img class="avatar" src="./images/ProfileSmall.png" alt="Profile" />
             <h1>Tristan Baskerville</h1>
-            <h3>Software Developer</h3>
+            <h2>Programmer</h2>
           </div>
 
-          <hr class="line-break" />
+          <hr class="line-blur center" />
 
           <div class="links">
-            <h2>Navigation:</h2>
+            <h2>Navigation</h2>
             <a class="nav-link" href="#home-1">Home</a>
             <a class="nav-link" href="#about-1">About</a>
             <a class="nav-link" href="#projects-1">Projects</a>
-            <a class="nav-link" href="#contact-1">Contact Me</a>
+            <a class="nav-link" href="#contact-1">Contact Info</a>
           </div>
         </div>
-        <div class="page-viewer">
+        <div class="page-container">
           <section class="page" id="home-1">
             <div class="page-content">
-              <h2>Home</h2>
-              <hr class="line-break-left" />
+              <h2>Welcome!</h2>
+              <hr class="line-blur left" />
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br />
-                Expedita quaerat ullam dicta similique ipsum animi facere error
-                modi, voluptatibus doloribus vitae autem, sit quibusdam labore?
+                Tristan is driven by the feeling of wonder the world is filled
+                with. He is eager for knowledge and understanding, as well as a
+                magical book to finally answer the trillion questions he ponders
+                hourly.
+                <br /><br />
+                As a programmer with more than 3 years of experience, he’s
+                worked on many projects, such as Ceramic Soul, Flatline, Deimos,
+                Ferret Fumble, and a slue of personal projects.
+                <br /><br />
+                When he’s not completing schoolwork or managing production
+                pipelines for his game team, you can find him spending time with
+                his family, enjoying the feeling of wind on his longboard, or
+                simply trying to get a handle on the tower of dishes that
+                seemingly spawns daily.
+                <br /><br />
+                His current project Ceramic Soul—a 3D puzzle horror game—is
+                being curated by a team of 28 students.
+
+                <br /><br />
+                To reach out, click the 'Contact Info' button! He reads every
+                email.
               </p>
+            </div>
+            <div class="page-content">
+              <h2>Contact Info</h2>
+              <hr class="line-blur left" />
             </div>
             <footer>
               <h4>One</h4>
@@ -57,7 +79,7 @@
           <section class="page" id="about-1">
             <div>
               <h2>About</h2>
-              <hr class="line-break-left" />
+              <hr class="line-blur left" />
               <p>
                 This website has been hand crafted by yours truly. <br />
                 I took a couple of weeks to learn HTML and CSS; if you find
@@ -73,7 +95,7 @@
           <section class="page" id="about-2">
             <div>
               <h2>About</h2>
-              <hr class="line-break-left" />
+              <hr class="line-blur left" />
               <p>This section is just to test multiple pages.</p>
             </div>
             <a class="nav-link prev" href="#about-1">&lt;</a>
@@ -94,7 +116,7 @@
             /> -->
             <div>
               <h2>Projects</h2>
-              <hr class="line-break-left" />
+              <hr class="line-blur left" />
               <p>
                 This section HAD a YouTube Embed, <br />
                 but it broke the rest of my site. Thanks, YouTube.
@@ -108,7 +130,7 @@
           <section class="page" id="contact-1">
             <div>
               <h2>Contact Me!</h2>
-              <hr class="line-break-left" />
+              <hr class="line-blur left" />
               <p>
                 I'd love to hear from you!<br />
                 If you want to find me on other platforms,
@@ -120,7 +142,7 @@
               <h2>Email</h2>
               <span class="material-icons-round md-36">email</span>
 
-              <hr class="line-break-left" />
+              <hr class="line-blur left" />
               <h3>
                 <!-- I don't want to paste my email as plain text, 
                      so ideally this should protext against spam to an extent -->
