--- a/index.html
+++ b/index.html
@@ -40,66 +40,80 @@
         </div>
         <div class="page-container">
           <section class="page" id="home-1">
-            <div class="page-content">
-              <h2>Welcome!</h2>
-              <hr class="line-blur left" />
-              <p>
-                Tristan is driven by the feeling of wonder the world is filled
-                with. He is eager for knowledge and understanding, as well as a
-                magical book to finally answer the trillion questions he ponders
-                hourly.
-                <br /><br />
-                As a programmer with more than 3 years of experience, he’s
-                worked on many projects, such as Ceramic Soul, Flatline, Deimos,
-                Ferret Fumble, and a slue of personal projects.
-                <br /><br />
-                When he’s not completing schoolwork or managing production
-                pipelines for his game team, you can find him spending time with
-                his family, enjoying the feeling of wind on his longboard, or
-                simply trying to get a handle on the tower of dishes that
-                seemingly spawns daily.
-                <br /><br />
-                His current project Ceramic Soul—a 3D puzzle horror game—is
-                being curated by a team of 28 students.
-
-                <br /><br />
-                To reach out, click the 'Contact Info' button! He reads every
-                email.
-              </p>
+            <div class="page-break main">
+              <div class="page-node">
+                <h2>Welcome!</h2>
+                <hr class="line-blur left" />
+                <p>
+                  Tristan is driven by the feeling of wonder the world is filled
+                  with. He is eager for knowledge and understanding, as well as
+                  a magical book to finally answer the trillion questions he
+                  ponders hourly.
+                  <br /><br />
+                  As a programmer with more than 3 years of experience, he’s
+                  worked on many projects, such as Ceramic Soul, Flatline,
+                  Deimos, Ferret Fumble, and a slue of personal projects.
+                  <br /><br />
+                  When he’s not completing schoolwork or managing production
+                  pipelines for his game team, you can find him spending time
+                  with his family, enjoying the feeling of wind on his
+                  longboard, or simply trying to get a handle on the tower of
+                  dishes that seemingly spawns daily.
+                  <br /><br />
+                  His current project Ceramic Soul—a 3D puzzle horror game—is
+                  being curated by a team of 28 students.
+                </p>
+              </div>
             </div>
-            <div class="page-content">
-              <h2>Contact Info</h2>
-              <hr class="line-blur left" />
+            <div class="page-break side">
+              <div class="page-node">
+                <h2>Contact Info</h2>
+                <span class="material-icons-round md-36"> contact_page </span>
+                <hr class="line-blur left" />
+                <a class="nav-link" href="#contact-1">Click me!</a>
+              </div>
+              <div class="page-node">
+                <h2>Read More</h2>
+                <span class="material-icons-round md-36"> description </span>
+                <hr class="line-blur left" />
+                <a class="nav-link" href="#projects-1">Click me! </a>
+              </div>
             </div>
-            <footer>
+            <footer class="page-node">
               <h4>One</h4>
             </footer>
           </section>
 
           <section class="page" id="about-1">
-            <div>
-              <h2>About</h2>
-              <hr class="line-blur left" />
-              <p>
-                This website has been hand crafted by yours truly. <br />
-                I took a couple of weeks to learn HTML and CSS; if you find
-                <br />
-                any bugs, send me a message! I'd love to hear from you.
-              </p>
+            <div class="page-break main">
+              <div class="page-node">
+                <h2>About</h2>
+                <hr class="line-blur left" />
+                <p>
+                  This website has been hand crafted by yours truly. <br />
+                  I took a couple of weeks to learn HTML and CSS; if you find
+                  <br />
+                  any bugs, send me a message! I'd love to hear from you.
+                </p>
+              </div>
+              <a class="nav-link next" href="#about-2">&gt;</a>
             </div>
-            <a class="nav-link next" href="#about-2">&gt;</a>
-            <footer>
+            <div class="page-break side"></div>
+            <footer class="page-node">
               <h4>One</h4>
             </footer>
           </section>
           <section class="page" id="about-2">
-            <div>
-              <h2>About</h2>
-              <hr class="line-blur left" />
-              <p>This section is just to test multiple pages.</p>
+            <div class="page-break main">
+              <div class="page-node">
+                <h2>About</h2>
+                <hr class="line-blur left" />
+                <p>This section is just to test multiple pages.</p>
+              </div>
+              <a class="nav-link prev" href="#about-1">&lt;</a>
             </div>
-            <a class="nav-link prev" href="#about-1">&lt;</a>
-            <footer>
+            <div class="page-break side"></div>
+            <footer class="page-node">
               <h4>Two</h4>
             </footer>
           </section>
@@ -114,42 +128,48 @@
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
             /> -->
-            <div>
-              <h2>Projects</h2>
-              <hr class="line-blur left" />
-              <p>
-                This section HAD a YouTube Embed, <br />
-                but it broke the rest of my site. Thanks, YouTube.
-              </p>
+            <div class="page-break main">
+              <div class="page-node">
+                <h2>Projects</h2>
+                <hr class="line-blur left" />
+                <p>
+                  This section HAD a YouTube Embed, <br />
+                  but it broke the rest of my site. Thanks, YouTube.
+                </p>
+              </div>
             </div>
-            <footer>
+            <div class="page-break side"></div>
+            <footer class="page-node">
               <h4>One</h4>
             </footer>
           </section>
 
           <section class="page" id="contact-1">
-            <div>
-              <h2>Contact Me!</h2>
-              <hr class="line-blur left" />
-              <p>
-                I'd love to hear from you!<br />
-                If you want to find me on other platforms,
-                <br />
-                check out some of the links provided.
-              </p>
+            <div class="page-break main">
+              <div class="page-node">
+                <h2>Contact Info</h2>
+                <hr class="line-blur left" />
+                <p>
+                  I'd love to hear from you!<br />
+                  If you want to find me on other platforms,
+                  <br />
+                  check out some of the links provided.
+                </p>
+              </div>
             </div>
-            <div class="page-node">
-              <h2>Email</h2>
-              <span class="material-icons-round md-36">email</span>
-
-              <hr class="line-blur left" />
-              <h3>
-                <!-- I don't want to paste my email as plain text, 
-                     so ideally this should protext against spam to an extent -->
-                tristan.dev<span style="display: none">spam</span>@outlook.com
-              </h3>
+            <div class="page-break side">
+              <div class="page-node">
+                <h2>Email</h2>
+                <span class="material-icons-round md-36">email</span>
+                <hr class="line-blur left" />
+                <h3>
+                  <!-- I don't want to paste my email as plain text, 
+                    so ideally this should protect against spam -->
+                  tristan.dev<span style="display: none">spam</span>@outlook.com
+                </h3>
+              </div>
             </div>
-            <footer>
+            <footer class="page-node">
               <h4>One</h4>
             </footer>
           </section>
