attempt to fix git issue

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <section class="glass">
         <div class="dashboard">
           <div class="profile">
-            <img class="avatar" src="./images/ProfileSmall.png" alt="Profile" />
+            <img class="avatar" src="images/ProfileSmall.png" alt="Profile" />
             <h1>Tristan Baskerville</h1>
             <h2>Programmer</h2>
           </div>
