Pushing old changes I made a while ago.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tristan Baskerville | Landing</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,6 +15,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css" />
+    <title>Tristan Baskerville | Landing</title>
   </head>
 
   <body>
@@ -33,145 +33,143 @@
           <div class="links">
             <h2>Navigation</h2>
             <a class="nav-link" href="#home-1">Home</a>
-            <a class="nav-link" href="#about-1">About</a>
             <a class="nav-link" href="#projects-1">Projects</a>
             <a class="nav-link" href="#contact-1">Contact Info</a>
           </div>
         </div>
         <div class="page-container">
           <section class="page" id="home-1">
-            <div class="page-break main">
+            <div class="page-break main-left">
               <div class="page-node">
                 <h2>Welcome!</h2>
                 <hr class="line-blur left" />
                 <p>
-                  Tristan is driven by the feeling of wonder the world is filled
-                  with. He is eager for knowledge and understanding, as well as
-                  a magical book to finally answer the trillion questions he
-                  ponders hourly.
-                  <br /><br />
-                  As a programmer with more than 3 years of experience, he’s
-                  worked on many projects, such as Ceramic Soul, Flatline,
-                  Deimos, Ferret Fumble, and a slue of personal projects.
-                  <br /><br />
-                  When he’s not completing schoolwork or managing production
-                  pipelines for his game team, you can find him spending time
-                  with his family, enjoying the feeling of wind on his
-                  longboard, or simply trying to get a handle on the tower of
-                  dishes that seemingly spawns daily.
-                  <br /><br />
-                  His current project Ceramic Soul—a 3D puzzle horror game—is
-                  being curated by a team of 28 students.
+                  Tristan Baskerville is a programmer with an aptitude for 
+                  solving complex problems with elegant solutions. 
+                  <br><br>This website aims to provide examples of various works that 
+                  best convey his capabilities.
                 </p>
               </div>
             </div>
-            <div class="page-break side">
-              <div class="page-node">
-                <h2>Contact Info</h2>
-                <span class="material-icons-round md-36"> contact_page </span>
-                <hr class="line-blur left" />
-                <a class="nav-link" href="#contact-1">Click me!</a>
-              </div>
+            <div class="page-break side-right">
               <div class="page-node">
                 <h2>Read More</h2>
                 <span class="material-icons-round md-36"> description </span>
                 <hr class="line-blur left" />
-                <a class="nav-link" href="#projects-1">Click me! </a>
+                <a class="nav-link" href="#projects-1">
+                  <span class="material-icons-round md-36">read_more</span>
+                </a>
               </div>
-            </div>
-            <footer class="page-node">
-              <h4>One</h4>
-            </footer>
-          </section>
-
-          <section class="page" id="about-1">
-            <div class="page-break main">
               <div class="page-node">
-                <h2>About</h2>
+                <h2>Contact Info</h2>
+                <span class="material-icons-round md-36">contact_page</span>
                 <hr class="line-blur left" />
-                <p>
-                  This website has been hand crafted by yours truly. <br />
-                  I took a couple of weeks to learn HTML and CSS; if you find
-                  <br />
-                  any bugs, send me a message! I'd love to hear from you.
-                </p>
+                <a class="nav-link" href="#contact-1">
+                  <span class="material-icons-round md-36">read_more</span>
+                </a>
               </div>
-              <a class="nav-link next" href="#about-2">&gt;</a>
             </div>
-            <div class="page-break side"></div>
-            <footer class="page-node">
-              <h4>One</h4>
-            </footer>
           </section>
-          <section class="page" id="about-2">
-            <div class="page-break main">
-              <div class="page-node">
-                <h2>About</h2>
-                <hr class="line-blur left" />
-                <p>This section is just to test multiple pages.</p>
-              </div>
-              <a class="nav-link prev" href="#about-1">&lt;</a>
-            </div>
-            <div class="page-break side"></div>
-            <footer class="page-node">
-              <h4>Two</h4>
-            </footer>
-          </section>
-
           <section class="page" id="projects-1">
-            <!-- <iframe
-              width="560"
-              height="315"
-              src="https://www.youtube-nocookie.com/embed/3Qtoe79ojpc"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            /> -->
-            <div class="page-break main">
+            <div class="page-break side-left">
               <div class="page-node">
                 <h2>Projects</h2>
                 <hr class="line-blur left" />
                 <p>
-                  This section HAD a YouTube Embed, <br />
-                  but it broke the rest of my site. Thanks, YouTube.
+                  This is the project section, where you can find out more
+                  information on the various projects Tristan Baskerville has
+                  contributed to.
                 </p>
               </div>
             </div>
-            <div class="page-break side"></div>
-            <footer class="page-node">
-              <h4>One</h4>
-            </footer>
+            <div class="page-break main-right">
+              <div class="page-node project">
+                <h2>Ceramic Soul</h2>
+                &nbsp;
+                <a
+                  href="https://youtu.be/3Qtoe79ojpc"
+                  target="_blank"
+                  class="nav-link"
+                >
+                  <span class="material-icons-round md-36">open_in_new</span>
+                </a>
+                <hr class="line-blur left" />
+                <h4>3D Puzzle Horror Game</h4>
+              </div>
+              <div class="page-node project">
+                <h2>Flatline</h2>
+                &nbsp;
+                <a
+                  href="https://store.steampowered.com/app/1520810/Flatline/"
+                  target="_blank"
+                  class="nav-link"
+                >
+                  <span class="material-icons-round md-36">open_in_new</span>
+                </a>
+                <hr class="line-blur left" />
+                <h4>2D Puzzle Platformer</h4>
+                &nbsp;
+                <a class="nav-link" href="html/flatline.html">
+                  <span class="material-icons-round md-36">read_more</span>
+                </a>
+              </div>
+              <div class="page-node project">
+                <h2>This Website</h2>
+                &nbsp;
+                <a
+                  href="https://tbasque.github.io/"
+                  target="_blank"
+                  class="nav-link"
+                >
+                  <span class="material-icons-round md-36">open_in_new</span>
+                </a>
+                <hr class="line-blur left" />
+                <h4>Personal Project</h4>
+                &nbsp;
+                <a class="nav-link" href="#">
+                  <span class="material-icons-round md-36">read_more</span>
+                </a>
+              </div>
+              <div class="page-node project">
+                <h2>3D Rendering Framework</h2>
+                <hr class="line-blur left" />
+                <h4>Personal Project</h4>
+                &nbsp;
+                <a class="nav-link" href="#">
+                  <span class="material-icons-round md-36">read_more</span>
+                </a>
+              </div>
+            </div>
           </section>
-
           <section class="page" id="contact-1">
-            <div class="page-break main">
+            <div class="page-break side-left">
               <div class="page-node">
                 <h2>Contact Info</h2>
                 <hr class="line-blur left" />
                 <p>
-                  I'd love to hear from you!<br />
-                  If you want to find me on other platforms,
-                  <br />
-                  check out some of the links provided.
+                  Want to get in touch?<br />
+                  Use the links and resources to reach out! <br />
                 </p>
               </div>
             </div>
-            <div class="page-break side">
+            <div class="page-break main-right">
               <div class="page-node">
                 <h2>Email</h2>
                 <span class="material-icons-round md-36">email</span>
                 <hr class="line-blur left" />
-                <h3>
+                <h4>
                   <!-- I don't want to paste my email as plain text, 
                     so ideally this should protect against spam -->
                   tristan.dev<span style="display: none">spam</span>@outlook.com
-                </h3>
+                </h4>
+              </div>
+              <div class="page-node">
+                <h2>LinkedIn</h2>
+                <span class="material-icons-round md-36">person</span>
+                <hr class="line-blur left" />
+                <h4>linkedin.com/in/tristan-baskerville</h4>
               </div>
             </div>
-            <footer class="page-node">
-              <h4>One</h4>
-            </footer>
           </section>
         </div>
       </section>
