Fixed links in project page

--- a/index.html
+++ b/index.html
@@ -47,13 +47,14 @@
                   Tristan Baskerville is a programmer with an aptitude for 
                   solving complex problems with elegant solutions. 
                   <br><br>This website aims to provide examples of various works that 
-                  best convey his capabilities.
+                  best convey his capabilities.<br><br>
+                  <strong>This website is still WIP.</strong> 
                 </p>
               </div>
             </div>
             <div class="page-break side-right">
               <div class="page-node">
-                <h2>Read More</h2>
+                <h4>Read More</h4>
                 <span class="material-icons-round md-36"> description </span>
                 <hr class="line-blur left" />
                 <a class="nav-link" href="#projects-1">
@@ -61,7 +62,7 @@
                 </a>
               </div>
               <div class="page-node">
-                <h2>Contact Info</h2>
+                <h4>Contact Info</h4>
                 <span class="material-icons-round md-36">contact_page</span>
                 <hr class="line-blur left" />
                 <a class="nav-link" href="#contact-1">
@@ -84,7 +85,7 @@
             </div>
             <div class="page-break main-right">
               <div class="page-node project">
-                <h2>Ceramic Soul</h2>
+                <h3>Ceramic Soul</h3>
                 &nbsp;
                 <a
                   href="https://youtu.be/3Qtoe79ojpc"
@@ -97,7 +98,7 @@
                 <h4>3D Puzzle Horror Game</h4>
               </div>
               <div class="page-node project">
-                <h2>Flatline</h2>
+                <h3>Flatline</h3>
                 &nbsp;
                 <a
                   href="https://store.steampowered.com/app/1520810/Flatline/"
@@ -108,30 +109,12 @@
                 </a>
                 <hr class="line-blur left" />
                 <h4>2D Puzzle Platformer</h4>
-                &nbsp;
-                <a class="nav-link" href="html/flatline.html">
+                <!-- <a class="nav-link" href="#">
                   <span class="material-icons-round md-36">read_more</span>
-                </a>
+                </a> -->
               </div>
               <div class="page-node project">
-                <h2>This Website</h2>
-                &nbsp;
-                <a
-                  href="https://tbasque.github.io/"
-                  target="_blank"
-                  class="nav-link"
-                >
-                  <span class="material-icons-round md-36">open_in_new</span>
-                </a>
-                <hr class="line-blur left" />
-                <h4>Personal Project</h4>
-                &nbsp;
-                <a class="nav-link" href="#">
-                  <span class="material-icons-round md-36">read_more</span>
-                </a>
-              </div>
-              <div class="page-node project">
-                <h2>3D Rendering Framework</h2>
+                <h3>3D Rendering Framework</h3>
                 <hr class="line-blur left" />
                 <h4>Personal Project</h4>
                 &nbsp;
@@ -154,7 +137,7 @@
             </div>
             <div class="page-break main-right">
               <div class="page-node">
-                <h2>Email</h2>
+                <h3>Email</h3>
                 <span class="material-icons-round md-36">email</span>
                 <hr class="line-blur left" />
                 <h4>
@@ -164,7 +147,7 @@
                 </h4>
               </div>
               <div class="page-node">
-                <h2>LinkedIn</h2>
+                <h3>LinkedIn</h3>
                 <span class="material-icons-round md-36">person</span>
                 <hr class="line-blur left" />
                 <h4>linkedin.com/in/tristan-baskerville</h4>
