Fix youtube link again

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <h3>Ceramic Soul</h3>
                 &nbsp;
                 <a
-                  href="https://youtu.be/Nu6QUJ5rRyQ"
+                  href="https://youtu.be/rilZqaxRDD4"
                   target="_blank"
                   class="nav-link"
                 >
