Update project content

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <h3>Ceramic Soul</h3>
                 &nbsp;
                 <a
-                  href="https://youtu.be/rilZqaxRDD4"
+                  href="https://store.steampowered.com/app/1967100/Ceramic_Soul/"
                   target="_blank"
                   class="nav-link"
                 >
@@ -114,12 +114,16 @@
                 </a> -->
               </div>
               <div class="page-node project">
-                <h3>3D Rendering Framework</h3>
+                <h3>Code Samples</h3>
                 <hr class="line-blur left" />
-                <h4>Personal Project</h4>
+                <h4>View code samples on GitHub</h4>
                 &nbsp;
-                <a class="nav-link" href="#">
-                  <span class="material-icons-round md-36">read_more</span>
+                <a
+                  href="https://github.com/tbasque/Code-Samples"
+                  target="_blank"
+                  class="nav-link"
+                >
+                  <span class="material-icons-round md-36">open_in_new</span>
                 </a>
               </div>
             </div>
